# nebula-app

./: .gitignore  NOTICE  README.md  memory.md  pubspec.yaml
Backend/: Cargo.toml  README.md  config.toml  long_term_memory.md
Backend/docs/backend-docs/: 01-setup.md  03-custom-wrappers.md
Backend/src/: addon.rs  agent.rs  config.rs  input.rs  lib.rs  main.rs  media.rs  output.rs  session.rs  state.rs
Backend/tests/: integration_config.rs
Frontend/: package.json
Frontend/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/src-tauri/src/: main.rs
android/app/: build.gradle.kts
docs/: 01-setup.md  02-architecture.md  03-custom-wrappers.md  README.md
docs/backend-docs/: 01-setup.md  02-architecture.md  03-custom-wrappers.md  README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: app_settings.dart  chat_session.dart
lib/screens/: app_shell.dart  chat_page.dart  landing_page.dart  live_mode_page.dart  onboarding_page.dart  settings_page.dart
lib/services/: chat_manager.dart  openai_service.dart  storage_service.dart  voice_service.dart  wake_word_service.dart  window_manager_service.dart
lib/theme/: nebula_theme.dart
lib/widgets/: audio_visualizer.dart  create_agent_dialog.dart  sidebar.dart
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
tests/: integration_config.rs
web/: index.html  manifest.json
windows/runner/: Runner.rc
(+1 files in other folders)
